# ColleC

./: .gitignore  .simplify_diff.txt  CLAUDE.md  README.md  TEST_USAGE_V0.9.1.md  alembic.ini  audit_routers_non_mountes.md  audit_ui_v0_9_0.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml  schema.md  tailwind.config.js
.github/workflows/: docs.yml
alembic/: env.py  helpers.py
alembic/versions/: 1b5220a50dee_suppression_table_utilisateur.py  380e05cd7254_initial_schema.py  619f10b212d5_ajout_doi_nakala.py  6c56abe736b4_hierarchie_collections.py  8c193feadcd0_table_operation_import.py  94ae179ad43c_descriptions_internes_et_auteur_.py  a1f2c3d4e5f6_phase_collection.py  b2g3h4i5j6k7_preferences_affichage.py  c3h4i5j6k7l8_fichier_sources.py  d4i5j6k7l8m9_session_import.py  f6k7l8m9n0o1_collaborateur_collection.py  (+18 more)
docs/: commandes_montrer.md  composants_ui.md  controles.md  derivatives.md  exports.md  importer.md  index.md  interface_web.md  profils.md  profils_creation.md  renamer.md
handoff/: README.md  tailwind.config.js
scripts/: _check_demo.py  audit_parite_prod_nakala.py  audit_parite_prod_volet_b.py  audit_parite_prod_volet_b_collection.py  explorer_cardinalite_nakala.py  explorer_files_granulaire_nakala.py  explorer_metadatas_granulaire_nakala.py  explorer_moderation_nakala.py  explorer_put_files_nakala.py  explorer_relations_type_nakala.py  reimport_pf.py  vendor.mjs  verifier_parite_vocabulaires_nakala.py
tests/: _helpers.py  conftest.py  test_annotations.py  test_annotations_beta.py  test_bouton_retirer_item.py  test_champs_personnalises.py  test_cli_annotations.py  test_cli_collections.py  test_cli_controler.py  test_cli_deriver.py  test_cli_exporter.py  test_cli_importer.py  test_cli_items.py  test_cli_montrer.py  test_cli_nakala.py  test_cli_nakala_collection.py  test_cli_nakala_depot.py  test_cli_nakala_fichiers.py  test_cli_nakala_tableur.py  test_cli_profil.py  test_cli_reindexer.py  test_cli_renommer.py  test_cli_sharedocs.py  test_cli_suppression.py  test_collaborateurs.py  test_collection_nouvelle_route.py  test_collection_routes.py  test_collection_services.py  test_collections.py  test_collections_creation.py  test_composants_ui.py  test_config.py  test_confirm_dialog_robustesse.py  test_contraintes.py  test_controle_web.py  test_dashboard_routes.py  test_dashboard_services.py  test_db_helpers.py  test_db_pragmas.py  test_demo_init.py  (+104 more)
(+369 files in other folders)
