[project]
name = "archives-tool"
version = "0.4.0"
description = "Outil interne de gestion de collections numérisées."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
archives-tool = "archives_tool.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"
