[project]
name = "archives-tool"
version = "0.6.3"
description = "Outil interne de gestion de collections numérisées."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "typer>=0.12",
    "rich>=13.0",
    "Pillow>=10.0",
    "PyMuPDF>=1.24",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.27",
]

[project.scripts]
archives-tool = "archives_tool.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"
